ecmascript/parser/tests/test262-error-references/fail/da4d9520d81ec621.js.stderr
error: Expected {, got <eof>
 --> $DIR/tests/test262-parser/fail/da4d9520d81ec621.js:1:7
  |
1 | class A
  |       ^

